--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/lasagna.html">Lasagna</a>
+    <ul>
+        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="./recipes/carbonara.html">Spaghetti Carbonara</a></li>
+        <li><a href="./recipes/frikadeller.html">Frikadeller</a></li>
+    </ul>
 </body>
 </html>
